--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -8,8 +8,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "CurtLeaf",
+  "license": "MIT",
   "devDependencies": {
     "typescript": "^5.4.5"
   },
