--- a/package.json
+++ b/package.json
@@ -9,8 +9,8 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
-  "license": "ISC",
+  "author": "CurtLeaf",
+  "license": "MIT",
   "devDependencies": {
     "rimraf": "^6.0.1"
   }
