--- a/apps/frontend/package.json
+++ b/apps/frontend/package.json
@@ -1,19 +1,27 @@
 {
   "name": "@tomeforge/frontend",
-  "version": "1.0.0",
+  "version": "0.0.1",
   "description": "",
-  "main": "index.js",
+  "main": "index.ts",
   "scripts": {
-    "build": "tsc",
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
   "author": "CurtLeaf",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^5.4.5"
+    "@types/react": "^18.2.14",
+    "@types/react-dom": "^18.2.7",
+    "@vitejs/plugin-react": "^4.3.4",
+    "typescript": "^5.4.5",
+    "vite": "^4.3.9"
   },
   "dependencies": {
-    "@tomeforge/shared": "workspace:^"
+    "@tomeforge/shared": "workspace:^",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0"
   }
 }
