--- a/apps/frontend/tsconfig.json
+++ b/apps/frontend/tsconfig.json
@@ -4,6 +4,14 @@
     "jsx": "react-jsx",
     "outDir": "dist",
     "rootDir": "src",
+    "target": "ESNext",
+    "lib": ["DOM", "DOM.Iterable", "ESNext"],
+    "module": "ESNext",
+    "moduleResolution": "Node",
+    "strict": true,
+    "esModuleInterop": true,
+    "skipLibCheck": true,
+    "forceConsistentCasingInFileNames": true
   },
   "include": ["src/**/*"],
   "exclude": ["node_modules", "dist"]
